Fix: Sidebar toggle visibility on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1149,7 +1149,7 @@ canvas {
     margin-left: var(--sidebar-w-col);
   }
 
-  .sidebar-toggle span {
+  .sidebar-toggle span:last-child {
     display: none;
   }
 
